--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon index.js",
     "run": "nodemon index.js"
@@ -23,6 +23,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "request": "^2.88.2",
     "sqlite": "^4.0.17",
     "sqlite3": "^5.0.0"
   },
